completed swagger ui is fully linked with express now
